@@ -53,6 +53,7 @@ require 'action_controller/caching'
 require 'action_controller/verification'
 require 'action_controller/streaming'
 require 'action_controller/session_management'
+require 'action_controller/http_authentication'
 require 'action_controller/components'
 require 'action_controller/record_identifier'
 require 'action_controller/macros/auto_complete'
@@ -76,6 +77,7 @@ ActionController::Base.class_eval do
   include ActionController::Verification
   include ActionController::Streaming
   include ActionController::SessionManagement
+  include ActionController::HttpAuthentication::Basic::ControllerMethods
   include ActionController::Components
   include ActionController::RecordIdentifier
   include ActionController::Macros::AutoComplete
